--- a/css/style.css
+++ b/css/style.css
@@ -1,79 +1,173 @@
-8 {
-  margin: 0;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Poppins&display=swap");
+* {
   padding: 0;
+  margin: 0;
+  text-decoration: none;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-
-.game-board {
-  width: 100%;
-  height: 500px;
-  border-bottom: 15px solid rgb(35, 160, 35);
-  margin: 0 auto;
+.Home {
+  min-height: 100vh;
+  background-color: #020c1c;
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 100px;
   overflow: hidden;
-  background: linear-gradient(#87ceeb, #e0f6ff);
 }
-.pipe {
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 100px;
+  font-size: 22px;
+  z-index: 99;
+  opacity: 0;
+  animation: to_bottom 1s ease forwards;
+}
+header h1 img {
+  color: #535fe9;
+  width: 100px;
+}
+header nav a {
+  color: white;
+  margin-left: 70px;
+  font-size: 26px;
+  position: relative;
+}
+header nav a::before {
+  content: "";
   position: absolute;
-  bottom: 0;
-  width: 80px;
-  animation: pipe-animation 1.5s infinite linear;
+  width: 100%;
+  height: 2.5px;
+  bottom: -5px;
+  left: 0;
+  background-color: white;
+  border-radius: 6px;
+  transition: 0.3s;
+  transform-origin: center;
+  transform: scaleX(0);
 }
-
-.mario {
-  width: 150px;
+header nav .active::before,
+header nav a:hover::before {
+  transform: scaleX(1);
+}
+.text-box {
+  width: 50%;
+}
+.text-box h1 {
+  font-size: 85px;
+  color: #535fe9;
+  animation: to_right 1s ease forwards 0.8s;
+}
+.text-box h1:nth-child(2) {
+  font-size: 50px;
+  color: white;
+  animation-delay: 0.9s;
+}
+.text-box p {
+  margin: 40px 0;
+  font-size: 22px;
+  width: 77%;
+  color: #5b5b5b;
+  animation: to_right 1s ease forwards 1s;
+}
+.btn-box {
+  display: flex;
+  gap: 20px;
+}
+.btn {
+  position: relative;
+  color: white;
+  padding: 12px 30px;
+  font-size: 20px;
+  border: 2px solid #535fe9;
+  background: transparent;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: 0.3s;
+  animation: to_right 1s ease forwards 1.1s;
+}
+.btn:hover,
+.btn:nth-child(2) {
+  color: black;
+  background-color: #535fe9;
+  box-shadow: 0 0 15px #535fe9;
+}
+.btn:nth-child(2):hover {
+  color: white;
+  background: transparent;
+  box-shadow: none;
+}
+.img {
   position: absolute;
-  bottom: 0;
+  right: 10%;
+  top: 30%;
+  height: 60%;
+  z-index: 1;
+  transform: translateY(100%);
+  animation: to_top 1.8s ease forwards 1.1s;
 }
-
-.jump {
-  animation: jump 500ms ease-out;
-}
-
-.clouds {
-  width: 500px;
+.background-span {
   position: absolute;
-  animation: clouds-animation 20s infinite linear;
+  height: 90%;
+  display: flex;
+  right: 0;
+  z-index: 0;
 }
-
-@keyframes pipe-animation {
-  from {
-    right: -80px;
-  }
-
-  to {
-    right: 100%;
-  }
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #020c1c;
+  animation: overlay_span 1.5s ease forwards 2.9s;
+  transform-origin: right;
 }
-
-@keyframes jump {
+.text-box * {
+  opacity: 0;
+}
+.text-box span {
+  opacity: 1;
+}
+/* keyframes */
+@keyframes to_bottom {
   0% {
-    bottom: 0;
+    opacity: 0;
+    transform: translateY(-50px);
   }
-
-  40% {
-    bottom: 180px;
-  }
-
-  50% {
-    bottom: 180px;
-  }
-
-  60% {
-    bottom: 180px;
-  }
-
   100% {
-    bottom: 0;
+    opacity: 1;
+    transform: translateY(0);
   }
 }
-
-@keyframes clouds-animation {
-  from {
-    right: -500px;
+@keyframes to_right {
+  0% {
+    opacity: 0;
+    transform: translateX(-50px);
   }
-
-  to {
-    right: 100%;
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+@keyframes to_top {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+@keyframes overlay_span {
+  0% {
+    transform: scaleX(1);
+  }
+  100% {
+    transform: scaleX(0);
   }
 }
